--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@babel/core": "^7.20.5",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-essentials": "^6.5.14",
@@ -27,8 +25,13 @@
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
+    "postcss": "^8.4.19",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-dts": "^1.7.1"
@@ -49,7 +52,7 @@
     "registry": "https://npm.pkg.github.com"
   },
   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/trades-org/retool-components-library.git"
+    "type": "git",
+    "url": "git+https://github.com/trades-org/retool-components-library.git"
   }
 }
