--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "@trades-org/retool-components-library",
+  "name": "@boris-huezo/retool-components-library",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "license": "MIT",
+  "author": {
+    "name": "Trades.org",
+    "email": "boris@trades.org"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
